Add support for query strings on the tabs

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -171,7 +171,7 @@ out of a modifier is to provide it as the nucleus of a preposition phrase.
 Preposition particles always take the word is immediately following it as a noun
 derivation of that word and it is the nucleus of the preposition phrase.
 
-<Tabs groupId="popöun-zıkto">
+<Tabs groupId="popöun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
     %%pön@pön%% %%ü@ü%% %%wölık@wölık%% %%cö@cö%% %%küyö@küyö%%
   </TabItem>
@@ -187,7 +187,7 @@ immediately following it is, take the noun derivation of that word type.
 This is especially useful for the typical reason that genitive phrases are
 useful: it allows you to describe a quality with some modifiers of its own.
 
-<Tabs groupId="popöun-zıkto">
+<Tabs groupId="popöun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
     %%töxücı@töxücı%% %%pümi@pümi%% %%yë@yë%% %%ıwotë@ıwotë%% %%ëto@ëto%%
   </TabItem>
