Add a good chunk on noun phrases.

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -185,7 +185,8 @@ Another way is to create a genitive phrase by preceding the modifier with the
 immediately following it is, take the noun derivation of that word type.
 
 This is especially useful for the typical reason that genitive phrases are
-useful: it allows you to describe a quality with some modifiers of its own.
+useful: it allows you to describe a quality with some modifiers of its own. One
+of the most common usages is when adding a degree to a modifier:
 
 <Tabs groupId="popöun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
@@ -196,4 +197,73 @@ useful: it allows you to describe a quality with some modifiers of its own.
   </TabItem>
 </Tabs>
 
+Since Hisyëö has less than 800 words, using genitive phrases with modifiers
+allows you to create more complex phrases that would require several sentences
+to formulate otherwise. 
+
 ## Noun Clauses
+
+A noun can be concrete or abstract, it doesn't have to be some physical entity
+or even a finite state. It can be a process or really anything that you might
+want to refer to and use as a subject or object of a sentence. In Hisyëö, you
+can create these complex nouns by building sentences within a special clause
+called a **Noun Clause**. In order to create one of these clauses, you must
+start with a particle. There are two special words available that can be used
+to introduce a noun clause:
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        <ol>
+          <li>%%do@do%% - Use this one for infinitives and gerunds</li>
+          <li>%%vos@vos%% - Use this one for complete inner sentences</li>
+        </ol>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <ol>
+          <li>%%ʌ@do%% - Use this one for infinitives and gerunds</li>
+          <li>%%ɤ́@vos%% - Use this one for complete inner sentences</li>
+        </ol>
+    </TabItem>
+</Tabs>
+
+After this particle, you start your sentence. In the infinitive/gerund form, you
+do not provide an agent/experiencer (subject) of the sentence because this is
+the nature of how infinitives are used: a noun that refers to the meaning
+expressed by the inner sentence but referred holisitically as an object in the
+outer sentence.
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        %%ëo@ëo%% %%govon@govon%% %%ölë@ölë%% %%noyo@noyo%% %%ü@ü%% <strong>%%do@do%%</strong> %%cöüvon@cöüvon%% %%cö@cö%% %%micin@micin%%. "to cook fish makes me disgusted"
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ɽʇɽ@ëo%% %%ꜿɤ̃@govon%% %%ɽıʓʇ@ölë%% %%ƨɀ@noyo%% %%ɽʄ@ü%% <strong>%%ʌ@do%%</strong> %%ꞇıɽʄɤ̃@cöüvon%% %%ꞇı@cö%% %%micin@micin%%. "to cook fish makes me disgusted"
+    </TabItem>
+</Tabs>
+
+:::caution Beware the similarity between gerunds and the abstract particle
+
+While using these noun clause gerunds is very useful, there is a distinction
+within Hisyëö between the gerund usage of a noun clause leading particle and the
+abstract particle preceding a content word. The abstract form should be thought
+of as "acts of" or "matters of" which should be seen as more of a loose
+relationship than using a noun clause as a gerund. "acts/matters of eating meat"
+means something different from "eating meat".
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        <p>%%toüyen@toüyen%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%do@do%% %%mokon@mokon%% %%cö@cö%% %%oksün@oksün%%.</p>
+        <p>%%toüyen@toüyen%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%kon@kon%% %%mokon@mokon%% %%oksün@oksün%%.</p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%cɽʄɀ̃ɿ@toüyen%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ʌ@do%% %%ƶɔ̃@mokon%% %%ꞇı@cö%% %%ɽ̑ɐɟɽ́ı@oksiös%%.</p>
+        <p>%%cɽʄɀ̃ɿ@toüyen%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ɔ̃@kon%% %%ƶɔ̃@mokon%% %%ɽ̑ɐɟɽ́ı@oksiös%%.</p>
+    </TabItem>
+</Tabs>
+
+The first sentence implies that the speaker hates specifically the act of eating
+meat whereas the second sentence implies that the speaker hates matters of meat
+eating altogether which broadens the hate to the act of discussing or thinking
+about it.
+
+:::
