Add more nouns content

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -243,12 +243,12 @@ outer sentence.
 
 :::caution Beware the similarity between gerunds and the abstract particle
 
-While using these noun clause gerunds is very useful, there is a distinction
-within Hisyëö between the gerund usage of a noun clause leading particle and the
-abstract particle preceding a content word. The abstract form should be thought
-of as "acts of" or "matters of" which should be seen as more of a loose
-relationship than using a noun clause as a gerund. "acts/matters of eating meat"
-means something different from "eating meat".
+While these noun clause gerunds are very useful, you must be careful to discern
+the distinction of meaning between the gerund usage of a noun clause leading
+particle and the abstract particle preceding a content word. The abstract form
+should be thought of as "acts of" or "matters of" which should be seen as more
+of a loose relationship than using a noun clause as a gerund. "acts/matters of
+eating meat" means something different from "eating meat".
 
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
@@ -264,6 +264,40 @@ means something different from "eating meat".
 The first sentence implies that the speaker hates specifically the act of eating
 meat whereas the second sentence implies that the speaker hates matters of meat
 eating altogether which broadens the hate to the act of discussing or thinking
-about it.
+about it. 
 
 :::
+
+The other form of noun phrase includes a subject or if one is not provided then
+it should be intepreted as "there is" or "it is" depending on the predicate that
+is provided. This form of noun phrase is useful when you need to introduce a
+clause that changes the subject from the underlying sentence. Some verbs
+primarily are used with some form of noun clause as their object and this form
+allows for a complete sentence to be included as that object.
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        <p>%%völun@völun%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%vos@vos%% %%völun@völun%% %%ü@ü%% %%nimü@nimü%% %%cö@cö%% %%noyo@noyo%% "I want you to want me"</p>
+        <p>%%xiwon@xiwon%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%vos@vos%% %%suhot@suhot%% %%tiü@tiü%% "I wish that it was 5 o'clock</p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ɤıʓ̃ʃ@völun%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ɤ́@vos%% %%ɤıʓ̃ʃ@völun%% %%ɽʄ@ü%% %%ƨɟƶʄ@nimü%% %%ꞇı@cö%% %%ƨɀ@noyo%% "I want you to want me"</p>
+        <p>%%ɋɟʒ̃@xiwon%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ɤ́@vos%% %%ɐʃɂ̆@suhot%% %%cɟɽʄ@tiü%% "I wish that it was 5 o'clock</p>
+    </TabItem>
+</Tabs>
+
+:::note English indirect object
+
+The English sentence in the translation above "I want you to want me" is using
+an indirect object of "you" and an direct object infinitve phrase of "to want
+me". This might seem like the wrong translation since there is a preposition
+that Hisyëö typically uses for indirect objects. This is just an example of some
+of the irregular grammar around the use of the verb "to want". In Hisyëö, the
+best translation is to use a finite noun phrase where the indirect object of the
+English sentence is now the subject of the inner noun clause.
+
+:::
+
+There are other uses of these same particles that create noun clauses as
+relative clause introducers and you can learn more about those usages in the
+Modifiers chapter.
