--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -15,7 +15,7 @@ quantifiers and modifiers.
 
 ### Causer / Voluntary Subject
 
-The %%ü@ü%% particle precedes this noun phrase.
+The %%ü@ü%%/%%ɽʄ@ü%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role represents the *causer*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -24,7 +24,7 @@ the act of their own free will.
 
 ### Causee / Involuntary Subject
 
-The %%ölë@ölë%% particle precedes this noun phrase.
+The %%ölë@ölë%%/%%ɽıʓʇ@ölë%% particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
@@ -35,49 +35,92 @@ are acting out of some basic instinst.
 
 ### Patient, Theme, Stimulus (Direct Object)
 
-The %%cö@cö%% particle precedes this noun phrase.
+The %%cö@cö%%/%%ꞇı@cö%% particle precedes this noun phrase.
 
 This role is used for transitive verbs that have an additional argument. The
 argument represents a patient (an entity that undergoes the action and changes
 state), a theme (an entity that undergoes the action but does not change state),
 or a stimulus (an entity that prompts sensory or emotional feeling). In English,
-this represents some of the senses of the word "to" and "into", however, often
-times there is no preceding particle for this argument.
+this represents some of the senses of the word "to" and "into". Although, many
+English verbs don't rely on a preposition to introduce their direct object.
+
+:::caution Base Verbs Without This Particle
+
+Not using this particle can have an impact on how base verb sentences are
+interpreted. Without providing a direct object, a base verb is interpreted as
+being *intransitive* or in an unthematic and generic manner (since no theme is
+being provided).
+
+:::
+
+A **patient** is an entity that undergoes the action and changes state in some
+manner. A **theme** is an entiy that undergoes the action but doesn't change
+state. A **stimulus** is an entity that prompts or triggers the emotional or
+sensory action that is being described. These kinds of direct objects aren't
+separately marked because which kind of object is being specified can be
+determined from the verb that is being used. The only thing that you must
+remember is that only base verbs can take a preposition of this kind. A sentence
+with a base modifier or base noun being used as a verb cannot contain this
+preposition.
 
 ### Instrument or Manner
 
-The %%vio@vio%% particle precedes this noun phrase.
+The %%vio@vio%%/%%ɤɟɽ@vio%% particle precedes this noun phrase.
 
 This role is used for NPs that represent some entity that was used to carry out
 the action. It can also represent the way or manner with which the action was
 carried out. In English, this represents some of the senses of the words "with",
 "using", and "via".
 
+:::info Thematic Relations
+
+This preposition and the remaining described here can be used with intransitive
+and transitive verb predicates and are only needed in certain circumstances when
+extra thematic information is useful to describing the predicate in a new way.
+These prepositions are known as **true thematic relations**. Subjects and
+objects are honorary members of the thematic relation club since they are
+usually called **morphosyntactic arguments**. They are included in the same
+class of word as the true thematic relations to simplify the grammatical system.
+This system is what allows the language to have complete **free constituent
+ordering**.
+
+:::
+
 ### Location or Time
 
-The %%hoi@hoi%% particle precedes this noun phrase.
+The %%hoi@hoi%%/%%ɂɽɟ@hoi%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where or when the action occurs. In
 English, this represents some of the senses of the words "in", "at", and "on".
 
 ### Direction or Destination (Indirect Object)
 
-The %%müt@müt%% particle precedes this noun phrase.
+The %%müt@müt%%/%%ƶ̆ʄ@müt%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action is directed towards.
 In English, this represents some of the senses of the words "to", "into", and
-"towards".
+"towards". Any time you might need an **indrect object** or *recipient, you can
+use this preposition to describe that constituent.
+
+:::info Reciprocity
+
+When you use this preposition with an NP of "%%xokön@xokön%% %%dizel@dizel%%",
+it means that the predicate is a reciprocal action which means that it happened
+between the subjects instead of the subjects directing that action towards some
+other referred entity.
+
+:::
 
 ### Source or Origin
 
-The %%sün@sün%% particle precedes this noun phrase.
+The %%sün@sün%%/%%ɐ̃ʄ@sün%% particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action originated. In
 English, this represents some of the senses of the word "from".
 
 ### Beneficiary or Purpose
 
-The %%oxon@oxon%% particle precedes this noun phrase.
+The %%oxon@oxon%%/%%ɽɋ̃@oxon%% particle precedes this noun phrase.
 
 This role is used for NPs that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
@@ -85,7 +128,7 @@ word "for".
 
 ### Cause
 
-The %%nënko@nënko%% particle precedes this noun phrase.
+The %%nënko@nënko%%/%%ƨ̃ʇɔ@nënko%% particle precedes this noun phrase.
 
 This role is used for NPs that represent what caused the action to occur or a
 past reason that led to the action. In English, this represents some of the
@@ -93,7 +136,7 @@ senses of the word "because".
 
 ### Collaborator
 
-The %%ovek@ovek%% particle precedes this noun phrase.
+The %%ovek@ovek%%/%%ɽɤ̑ɿ@ovek%% particle precedes this noun phrase.
 
 This role is used for NPs that represent a fellow actor that is also engaged in
 the same action as the subject. However, the NP is not considered a subject of
@@ -102,7 +145,7 @@ the sentence. In English, this represents some of the senses of the word
 
 ### Context or Condition
 
-The %%win@win%% particle precedes this noun phrase.
+The %%win@win%%/%%ʒ̃ɟ@win%% particle precedes this noun phrase.
 
 This role is used for NPs that represent an overarching topic, contextual
 detail, or a condition for the underlying sentence. In English, this represents
@@ -110,7 +153,7 @@ some of the senses of the words "regarding", "given", "as for", and "when".
 
 ### Counter-Agent
 
-The %%dën@dën%% particle precedes this noun phrase.
+The %%dën@dën%%/%%ʌ̃ʇ@dën%% particle precedes this noun phrase.
 
 This role is used for NPs that either represent a special kind of goal/agent for
 verbs that indicates an opposing agent for verbs that indicate an action that is
@@ -119,7 +162,7 @@ English, this represents some of the senses of the word "against".
 
 ### Evidence
 
-The %%üc@üc%% particle precedes this noun phrase.
+The %%üc@üc%%/%%ɽ̄ʄ@üc%% particle precedes this noun phrase.
 
 This role is used for NPs that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
@@ -127,7 +170,7 @@ occur. In English, this represents some of the senses of the phrase "or so".
 
 ### Distance or Duration
 
-The %%lon@lon%% particle precedes this noun phrase.
+The %%lon@lon%%/%%ʓ̃@lon%% particle precedes this noun phrase.
 
 This role is used for NPs that represent the time or space that the action
 occurs within. This role is related to the location/time role but it represents
@@ -136,7 +179,7 @@ of the senses of the word "for".
 
 ### Intermediate
 
-The %%gıtno@gıtno%% particle precedes this noun phrase.
+The %%gıtno@gıtno%%/%%ꜿ̆ȷƨ@gıtno%% particle precedes this noun phrase.
 
 This role is used for either a NP that represents the a time or physical entity
 that the action occurs between or a conjunction of two NPs that represent two
@@ -145,7 +188,7 @@ represents some of the senses of the word "between".
 
 ### Genitive
 
-The %%yë@yë%% particle precedes this noun phrase.
+The %%yë@yë%%/%%ɀʇ@yë%% particle precedes this noun phrase.
 
 This role is used for a NP that is describing the preceding noun or verb phrase
 in some contextually dependent manner. In English, this represents some of the
@@ -181,7 +224,7 @@ derivation of that word and it is the nucleus of the preposition phrase.
 </Tabs>
 
 Another way is to create a genitive phrase by preceding the modifier with the
-%%yë@yë%% particle. This particle means that whatever word type that the word
+%%yë@yë%%/%%ɀʇ@yë%% particle. This particle means that whatever word type that the word
 immediately following it is, take the noun derivation of that word type.
 
 This is especially useful for the typical reason that genitive phrases are
@@ -268,12 +311,13 @@ about it.
 
 :::
 
-The other form of noun phrase includes a subject or if one is not provided then
-it should be intepreted as "there is" or "it is" depending on the predicate that
-is provided. This form of noun phrase is useful when you need to introduce a
-clause that changes the subject from the underlying sentence. Some verbs
-primarily are used with some form of noun clause as their object and this form
-allows for a complete sentence to be included as that object.
+The other form of noun phrase (%%vos@vos%%/%%ɤ́@vos%%) includes a subject or if one is not provided then,
+like a normal sentence, it should be intepreted as "there is" or "it is"
+depending on the predicate that is provided. This form of noun phrase is useful
+when you need to introduce a clause that changes (or removes) the subject from
+the underlying sentence. Some verbs primarily are used with some form of noun
+clause as their object and this form allows for a complete sentence to be
+included as that object.
 
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
@@ -292,12 +336,11 @@ The English sentence in the translation above "I want you to want me" is using
 an indirect object of "you" and an direct object infinitve phrase of "to want
 me". This might seem like the wrong translation since there is a preposition
 that Hisyëö typically uses for indirect objects. This is just an example of some
-of the irregular grammar around the use of the verb "to want". In Hisyëö, the
-best translation is to use a finite noun phrase where the indirect object of the
-English sentence is now the subject of the inner noun clause.
+of the irregular English grammar around the use of the verb "to want". In
+Hisyëö, the best translation is to use a finite noun phrase where the indirect
+object of the English sentence is now the subject of the inner noun clause.
 
 :::
 
-There are other uses of these same particles that create noun clauses as
-relative clause introducers and you can learn more about those usages in the
-Modifiers chapter.
+There are other uses of these same particles as relative clause introducers and
+you can learn more about those usages in the Modifiers chapter.
