add more first steps content and an example of minutes

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -544,10 +544,51 @@ preposition.
     </TabItem>
 </Tabs>
 
-
 ### Durations
 
+If you need to say an amount of time rather than a point in time, you follow the
+normal approach for creating plurality: provide the number words in the
+determiner slot (left side of the head word).
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        <p>%%yünyoü@yünyoü%% %%ü@ü%% %%nimü@nimü%% %%cö@cö%% %%son@son%% %%suhot@suhot%% "You have three hours"</p>
+        <p>%%puswen@puswen%% %%ü@ü%% %%tüu@tüu%% %%ulyö@ulyö%% %%cö@cö%% %%kut@kut%% %%suhot@suhot%% "That task needs an hour"</p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ɀ̃ʄɀɽʄ@yünyoü%% %%ɽʄ@ü%% %%ƨɟƶʄ@nimü%% %%ꞇı@cö%% %%ɐ̃@son%% %%ɐʃɂ̆@suhot%% "You have three hours"</p>
+        <p>%%ʋ́ʃʒ̃ɿ@puswen%% %%ɽʄ@ü%% %%cʄɽʃ@tüu%% %%ɽ͊ʃɀı@ulyö%% %%ꞇı@cö%% %%ɔ̆ʃ@kut%% %%ɐʃɂ̆@suhot%% "That task needs an hour"</p>
+    </TabItem>
+</Tabs>
+
+Most of the time when we are referring to time, we think of it as a specific
+location on the flow of time (hence why it shares the same preposition particle
+as we use for denoting the location of an action). When you need to refer to
+a duration/length of time we use a different particle meant for distances and
+durations.
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        %%si@si%% %%tüu@tüu%% %%ü@ü%% %%ni@ni%% %%lon@lon%% %%nonkü@nonkü%% %%suhot@suhot%% "We did that for four hours"
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ɐɟ@si%% %%cʄɽʃ@tüu%% %%ɽʄ@ü%% %%ƨɟ@ni%% %%ʓ̃@lon%% %%ƨ̃ɔʄ@nonkü%% %%ɐʃɂ̆@suhot%% "We did that for four hours"
+    </TabItem>
+</Tabs>
+
 ### Exact Times
+
+If you need to talk about specific times within an hour, there is a base
+modifier content word that does double duty as a time unit for minutes.
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        %%gö@gö%% %%somö@somö%% %%lon@lon%% %%tiü@tiü%% %%ëvun@ëvun%% "It will only be 5 minutes"
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ꜿı@gö%% %%ɐƶı@somö%% %%ʓ̃@lon%% %%cɟɽʄ@tiü%% %%ɽʇɤ̃ʃ@ëvun%% "It will only be 5 minutes"
+    </TabItem>
+</Tabs>
 
 ## Measurements
 
