fix missing import on modifier page

--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -2,6 +2,9 @@
 sidebar_position: 3
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 # Modifiers
 
 A type of word that describes a verb or noun.
