fix for wrong demonstrative as subject

--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -83,12 +83,12 @@ party.
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <p>%%vıyüxit@vıyüxit%% %%hoi@hoi%% %%sëdu@sëdu%% %%muni@muni%% %%ü@ü%% %%umo@umo%% %%wohi@wohi%% %%do@do%% %%nıwos@nıwos%% %%hoi@hoi%% %%zınkon@zınkon%% %%uklo@uklo%%. "The woman who lives next door works in a bank."</p>
-        <p>%%ü@ü%% %%ulyö@ulyö%% %%lı@lı%% %%non@non%% %%vos@vos%% %%völun@völun%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%do@do%% %%möniso@möniso%% %%cö@cö%% %%övo@övo%% %%müt@müt%% %%nimü@nimü%%. "This is the video that I wanted to show you."</p>
+        <p>%%ü@ü%% %%övo@övo%% %%lı@lı%% %%non@non%% %%vos@vos%% %%völun@völun%% %%ü@ü%% %%noyo@noyo%% %%cö@cö%% %%do@do%% %%möniso@möniso%% %%cö@cö%% %%övo@övo%% %%müt@müt%% %%nimü@nimü%%. "This is the video that I wanted to show you."</p>
         <p>%%yöüli@yöüli%% %%ëto@ëto%% %%ü@ü%% %%umo@umo%% %%vos@vos%% %%dëko@dëko%% %%xopëk@xopëk%% %%ü@ü%% %%loı@loı%% %%cö@cö%% %%onö@onö%%. "The person they spoke to was really helpful."</p>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
         <p>%%ɤȷɀʄɋ̆ɟ@vıyüxit%% %%ɂɽɟ@hoi%% %%ɐʇʌʃ@sëdu%% %%ƶʃƨɟ@muni%% %%ɽʄ@ü%% %%ɽʃƶ@umo%% %%ʒɂɟ@wohi%% %%ʌ@do%% %%ƨȷʒ́@nıwos%% %%ɂɽɟ@hoi%% %%ⱴ̃ȷɔ̃@zınkon%% %%ɽ̑ʃʓ@uklo%%. "The woman who lives next door works in a bank."</p>
-        <p>%%ɽʄ@ü%% %%ɽ͊ʃɀı@ulyö%% %%ʓȷ@lı%% %%ƨ̃@non%% %%ɤ́@vos%% %%ɤıʓ̃ʃ@völun%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ʌ@do%% %%ƶıƨɟɐ@möniso%% %%ꞇı@cö%% %%ɽıɤ@övo%% %%ƶ̆ʄ@müt%% %%ƨɟƶʄ@nimü%%. "This is the video that I wanted to show you."</p>
+        <p>%%ɽʄ@ü%% %%ɽıɤ@övo%% %%ʓȷ@lı%% %%ƨ̃@non%% %%ɤ́@vos%% %%ɤıʓ̃ʃ@völun%% %%ɽʄ@ü%% %%ƨɀ@noyo%% %%ꞇı@cö%% %%ʌ@do%% %%ƶıƨɟɐ@möniso%% %%ꞇı@cö%% %%ɽıɤ@övo%% %%ƶ̆ʄ@müt%% %%ƨɟƶʄ@nimü%%. "This is the video that I wanted to show you."</p>
         <p>%%ɀıɽʄʓɟ@yöüli%% %%ɽʇc@ëto%% %%ɽʄ@ü%% %%ɽʃƶ@umo%% %%ɤ́@vos%% %%ʌʇɔ@dëko%% %%ɋʋ̑ʇ@xopëk%% %%ɽʄ@ü%% %%ʓɽȷ@loı%% %%ꞇı@cö%% %%ɽƨı@onö%%. "The person they spoke to was really helpful."</p>
     </TabItem>
 </Tabs>
