add some extra measurement info

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -592,9 +592,68 @@ modifier content word that does double duty as a time unit for minutes.
 
 ## Measurements
 
+To indicate a measurement of something, it helps to have a way to describe a
+"unit" of measurement. There is no exact word for this in Hisyëö, although
+%%mikdol@mikdol%% / %%ƶ̑ɟʌ͊@mikdol%% and %%wilüwo@wilüwo%% / %%ʒɟʓʄʒ@wilüwo%%
+come close. The word "unit" means "singular entity" which we might think to
+reach for the number one (%%kut@kut%% / %%ɔʃʌʄʌ@kudüdo%%). To help add some
+clarity, let's use "trait" as the head word to create our own state of
+"oneness". Instead of adding "entities" as true head word, let's just leave it
+as-is because this matches how the words that stand-in for "second" and "minute"
+work.
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        <p>%%gö@gö%% %%yë@yë%% %%di@di%% %%kut@kut%% %%yë@yë%% %%di@di%% %%volo@volo%% %%möi@möi%% %%wo@wo%% %%yë@yë%% %%zomi@zomi%% %%ü@ü%% %%hondon@hondon%%. <em>"The family is the basic unit of society."</em></p>
+        <p>%%ondo@ondo%% %%ü@ü%% %%küngiyo@küngiyo%% %%cö@cö%% %%do@do%% %%ëo@ëo%% %%vunlit@vunlit%% %%ölë@ölë%% %%cızi@cızi%% %%müt@müt%% %%düi@düi%% %%yodo@yodo%% %%son@son%% %%di@di%% %%kut@kut%%<em>"The company plans to split into two or three units."</em></p>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <p>%%ꜿı@gö%% %%ɀʇ@yë%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%ʌɟ@di%% %%ɤʓ@volo%% %%ƶıɽɟ@möi%% %%ʒ@wo%% %%ɀʇ@yë%% %%ⱴƶɟ@zomi%% ü %%ɂ̃ʌ̃@hondon%%. <em>"The family is the basic unit of society."</em></p>
+        <p>%%ɽ̃ʌ@ondo%% %%ɽʄ@ü%% %%ɔ̃ʄꜿɟɀ@küngiyo%% %%ꞇı@cö%% %%ʌ@do%% %%ɽʇɽ@ëo%% %%ɤ̃ʃʓ̆ɟ@vunlit%% %%ɽıʓʇ@ölë%% %%ꞇȷⱴɟ@cızi%% %%ƶ̆ʄ@müt%% %%ʌʄɽɟ@düi%% %%ɀʌ@yodo%% %%ɐ̃@son%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%%<em>"The company plans to split into two or three units."</em></p>
+    </TabItem>
+</Tabs>
+
+Other than the time words, the rest of the measurement units are done by just
+referring to what kind of measurement the unit is for.
+
 ### Temperature
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        %%socok@socok%% %%ü@ü%% %%ximu@ximu%% %%cö@cö%% %%vıldonpun@vıldonpun%% %%lon@lon%% %%kut@kut%% %%viyën@viyën%% %%di@di%% %%kut@kut%% %%yë@yë%% %%tüt@tüt%%<em>"Water boils at 100 degrees Celsius."</em>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        %%ɐꞇ̑@socok%% %%ɽʄ@ü%% %%ɋɟƶʃ@ximu%% %%ꞇı@cö%% %%ɤ͊ȷʌ̃ʋ̃ʃ@vıldonpun%% %%ʓ̃@lon%% %%ɔ̆ʃ@kut%% %%ɤɟɀ̃ʇ@viyën%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%c̆ʄ@tüt%%<em>"Water boils at 100 degrees Celsius."</em>
+    </TabItem>
+</Tabs>
+
+Since "Celcius" and "Fahrenheit" are names, you can use these if needed. The
+proper spellings would be:
+
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+        <ul>
+          <li>%%di@di%% %%kut@kut%% Volunhoıt</li>
+          <li>%%di@di%% %%kut@kut%% Selsius</li>
+        </ul>
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+        <ul>
+          <li>%%ʌɟ@di%% %%ɔ̆ʃ@kut%% ‹ɤʓ̃ʃɂɽ̆ȷ›</li>
+          <li>%%ʌɟ@di%% %%ɔ̆ʃ@kut%% ‹ɐ͊ɿɐɟɽ́ʃ›</li>
+        </ul>
+    </TabItem>
+</Tabs>
 
 ### Mass/Volume/Weight
 
+For mass, assume that measurements are in grams or pounds (depending on where
+you are in the world). Add %%cënpö@cënpö%% / %%ꞇ̃ʇʋı@cënpö%% for kilograms or
+tons.
+
+
+
 ### Length/Width/Height
 
+For mass, assume that measurements are in meters or feet (depending on where you
+are in the world). Add %%cënpö@cënpö%% / %%ꞇ̃ʇʋı@cënpö%% for kilometers or miles.
