Add abugida version to all non tab Hisyëö words

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -225,7 +225,8 @@ The Hisyëö week days are, unlike the rest of the calendar, named after the mos
 prevalent color of the planets of our solar system as seen in true color
 photography of the planet. The start of the week was chosen as Monday to
 coincide with the near majority of the world agreement on this and it allows
-Saturday and Sunday to be the "Weekend" (%%könyëc@könyëc%% %%wëxön@wëxön%%).
+Saturday and Sunday to be the "Weekend" (%%könyëc/ɔ̃ıɀ̄ʇ@könyëc%%
+%%wëxön/ʒʇɋ̃ı@wëxön%%).
 
 | Planet  | True Color Photo                                                                                                                                                                                                                                                                                                                                                                         | English   | Hisyëö                            | Abugida                        |
 | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------- | :-------------------------------- | :----------------------------- |
@@ -238,9 +239,9 @@ Saturday and Sunday to be the "Weekend" (%%könyëc@könyëc%% %%wëxön@wëxön
 | Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | %%lono@lono%% %%xolxili@xolxili%% | %%ʓƨ@lono%% %%ɋ͊ɋɟʓɟ@xolxili%%  |
 
 In order to indicate a specific day use one of the demonstrative pronouns
-(%%övo@övo%%, %%ulyö@ulyö%%, %%onö@onö%%). Otherwise, a weekday (or really any
-use of %%lono@lono%%) is either one or many unspecified days. You can use a day
-as a condition in a %%win@win%% prepositional phrase:
+(%%övo/ɽıɤ@övo%%, %%ulyö/ɽ͊ʃɀı@ulyö%%, %%onö/ɽƨı@onö%%). Otherwise, a weekday
+(or really any use of %%lono@lono%%) is either one or many unspecified days. You
+can use a day as a condition in a %%win@win%% prepositional phrase:
 
 <Tabs groupId="popöun-kon-cukto" queryString>
   <TabItem value="latin" label="Latin" default>
@@ -594,13 +595,12 @@ modifier content word that does double duty as a time unit for minutes.
 
 To indicate a measurement of something, it helps to have a way to describe a
 "unit" of measurement. There is no exact word for this in Hisyëö, although
-%%mikdol@mikdol%% / %%ƶ̑ɟʌ͊@mikdol%% and %%wilüwo@wilüwo%% / %%ʒɟʓʄʒ@wilüwo%%
-come close. The word "unit" means "singular entity" which we might think to
-reach for the number one (%%kut@kut%% / %%ɔʃʌʄʌ@kudüdo%%). To help add some
-clarity, let's use "trait" as the head word to create our own state of
-"oneness". Instead of adding "entities" as true head word, let's just leave it
-as-is because this matches how the words that stand-in for "second" and "minute"
-work.
+%%mikdol/ƶ̑ɟʌ͊@mikdol%% and %%wilüwo/ʒɟʓʄʒ@wilüwo%% come close. The word "unit"
+means "singular entity" which we might think to reach for the number one
+(%%kut/ɔʃʌʄʌ@kut%%). To help add some clarity, let's use "trait" as
+the head word to create our own state of "oneness". Instead of adding "entities"
+as true head word, let's just leave it as-is because this matches how the words
+that stand-in for "second" and "minute" work.
 
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
@@ -648,12 +648,11 @@ proper spellings would be:
 ### Mass/Volume/Weight
 
 For mass, assume that measurements are in grams or pounds (depending on where
-you are in the world). Add %%cënpö@cënpö%% / %%ꞇ̃ʇʋı@cënpö%% for kilograms or
-tons.
+you are in the world). Add %%cënpö/ꞇ̃ʇʋı@cënpö%% for kilograms or tons.
 
 
 
 ### Length/Width/Height
 
 For mass, assume that measurements are in meters or feet (depending on where you
-are in the world). Add %%cënpö@cënpö%% / %%ꞇ̃ʇʋı@cënpö%% for kilometers or miles.
+are in the world). Add %%cënpö/ꞇ̃ʇʋı@cënpö%% for kilometers or miles.
