Fix for missing spaces and punctuation

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -605,11 +605,11 @@ that stand-in for "second" and "minute" work.
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
         <p>%%gö@gö%% %%yë@yë%% %%di@di%% %%kut@kut%% %%yë@yë%% %%di@di%% %%volo@volo%% %%möi@möi%% %%wo@wo%% %%yë@yë%% %%zomi@zomi%% %%ü@ü%% %%hondon@hondon%%. <em>"The family is the basic unit of society."</em></p>
-        <p>%%ondo@ondo%% %%ü@ü%% %%küngiyo@küngiyo%% %%cö@cö%% %%do@do%% %%ëo@ëo%% %%vunlit@vunlit%% %%ölë@ölë%% %%cızi@cızi%% %%müt@müt%% %%düi@düi%% %%yodo@yodo%% %%son@son%% %%di@di%% %%kut@kut%%<em>"The company plans to split into two or three units."</em></p>
+        <p>%%ondo@ondo%% %%ü@ü%% %%küngiyo@küngiyo%% %%cö@cö%% %%do@do%% %%ëo@ëo%% %%vunlit@vunlit%% %%ölë@ölë%% %%cızi@cızi%% %%müt@müt%% %%düi@düi%% %%yodo@yodo%% %%son@son%% %%di@di%% %%kut@kut%%. <em>"The company plans to split into two or three units."</em></p>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
         <p>%%ꜿı@gö%% %%ɀʇ@yë%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%ʌɟ@di%% %%ɤʓ@volo%% %%ƶıɽɟ@möi%% %%ʒ@wo%% %%ɀʇ@yë%% %%ⱴƶɟ@zomi%% ü %%ɂ̃ʌ̃@hondon%%. <em>"The family is the basic unit of society."</em></p>
-        <p>%%ɽ̃ʌ@ondo%% %%ɽʄ@ü%% %%ɔ̃ʄꜿɟɀ@küngiyo%% %%ꞇı@cö%% %%ʌ@do%% %%ɽʇɽ@ëo%% %%ɤ̃ʃʓ̆ɟ@vunlit%% %%ɽıʓʇ@ölë%% %%ꞇȷⱴɟ@cızi%% %%ƶ̆ʄ@müt%% %%ʌʄɽɟ@düi%% %%ɀʌ@yodo%% %%ɐ̃@son%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%%<em>"The company plans to split into two or three units."</em></p>
+        <p>%%ɽ̃ʌ@ondo%% %%ɽʄ@ü%% %%ɔ̃ʄꜿɟɀ@küngiyo%% %%ꞇı@cö%% %%ʌ@do%% %%ɽʇɽ@ëo%% %%ɤ̃ʃʓ̆ɟ@vunlit%% %%ɽıʓʇ@ölë%% %%ꞇȷⱴɟ@cızi%% %%ƶ̆ʄ@müt%% %%ʌʄɽɟ@düi%% %%ɀʌ@yodo%% %%ɐ̃@son%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%%. <em>"The company plans to split into two or three units."</em></p>
     </TabItem>
 </Tabs>
 
@@ -620,10 +620,10 @@ referring to what kind of measurement the unit is for.
 
 <Tabs groupId="popöun-kon-cukto" queryString>
     <TabItem value="latin" label="Latin" default>
-        %%socok@socok%% %%ü@ü%% %%ximu@ximu%% %%cö@cö%% %%vıldonpun@vıldonpun%% %%lon@lon%% %%kut@kut%% %%viyën@viyën%% %%di@di%% %%kut@kut%% %%yë@yë%% %%tüt@tüt%%<em>"Water boils at 100 degrees Celsius."</em>
+        %%socok@socok%% %%ü@ü%% %%ximu@ximu%% %%cö@cö%% %%vıldonpun@vıldonpun%% %%lon@lon%% %%kut@kut%% %%viyën@viyën%% %%di@di%% %%kut@kut%% %%yë@yë%% %%tüt@tüt%%. <em>"Water boils at 100 degrees Celsius."</em>
     </TabItem>
     <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
-        %%ɐꞇ̑@socok%% %%ɽʄ@ü%% %%ɋɟƶʃ@ximu%% %%ꞇı@cö%% %%ɤ͊ȷʌ̃ʋ̃ʃ@vıldonpun%% %%ʓ̃@lon%% %%ɔ̆ʃ@kut%% %%ɤɟɀ̃ʇ@viyën%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%c̆ʄ@tüt%%<em>"Water boils at 100 degrees Celsius."</em>
+        %%ɐꞇ̑@socok%% %%ɽʄ@ü%% %%ɋɟƶʃ@ximu%% %%ꞇı@cö%% %%ɤ͊ȷʌ̃ʋ̃ʃ@vıldonpun%% %%ʓ̃@lon%% %%ɔ̆ʃ@kut%% %%ɤɟɀ̃ʇ@viyën%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%c̆ʄ@tüt%%. <em>"Water boils at 100 degrees Celsius."</em>
     </TabItem>
 </Tabs>
 
