--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -650,7 +650,18 @@ proper spellings would be:
 For mass, assume that measurements are in grams or pounds (depending on where
 you are in the world). Add %%cënpö/ꞇ̃ʇʋı@cënpö%% for kilograms or tons.
 
+> It is widely recommended that adults consume 15-35 grams of fiber daily, although many Americans fall short.
+> 
+> —Casey Seiden, Verywell Health, 3 May 2024
 
+<Tabs groupId="popöun-kon-cukto" queryString>
+    <TabItem value="latin" label="Latin" default>
+      %%pësnëhot@pësnëhot%% %%nulto@nulto%% %%cö@cö%% %%mokon@mokon%% %%ü@ü%% %%umo@umo%% %%wë@wë%% %%xonluk@xonluk%% %%gıtno@gıtno%% %%dus@dus%% %%tiü@tiü%% %%moliyü@moliyü%% %%son@son%% %%dus@dus%% %%tiü@tiü%% %%di@di%% %%kut@kut%% %%yë@yë%% %%küsowi@küsowi%% %%hoi@hoi%% %%xokön@xokön%% %%lono@lono%%, %%lëkın@lëkın%% %%püzök@püzök%% %%onö@onö%% %%ü@ü%% %%mikdol@mikdol%% %%yë@yë%% %%ëto@ëto%% %%umo@umo%% Umelıkın.
+    </TabItem>
+    <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
+      %%ʋ́ʇƨʇɂ̆@pësnëhot%% %%ƨ͊ʃc@nulto%% %%ꞇı@cö%% %%ƶɔ̃@mokon%% %%ɽʄ@ü%% %%ɽʃƶ@umo%% %%ʒʇ@wë%% %%ɋ̃ʓ̑ʃ@xonluk%% %%ꜿ̆ȷƨ@gıtno%% %%ʌ́ʃ@dus%% %%cɟɔ͊ʇ@tikël%% %%ƶʓɟɀʄ@moliyü%% %%ɐ̃@son%% %%ʌ́ʃ@dus%% %%cɟɽʄ@tiü%% %%ʌɟ@di%% %%ɔ̆ʃ@kut%% %%ɀʇ@yë%% %%ɔʄɐʒɟ@küsowi%% %%ɂɽɟ@hoi%% %%ɋɔ̃ı@xokön%% %%ʓƨ@lono%%, %%ʓʇɔ̃ȷ@lëkın%% %%ʋʄⱴ̑ı@püzök%% %%ɽƨı@onö%% %%ɽʄ@ü%% %%ƶ̑ɟʌ͊@mikdol%% %%ɀʇ@yë%% %%ɽʇc@ëto%% %%ɽʃƶ@umo%% ‹ɽʃƶɿʓȷɔ̃ȷ›.
+    </TabItem>
+</Tabs>
 
 ### Length/Width/Height
 
