Fix a small word miss

--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -23,7 +23,8 @@ as a modifier to the preceding head phrase.
 
 The %%wo@wo%%/%%ʒ@wo%% particle allows you to specify that any content word
 being used as a modifier is seen as applying meaning to the *entire* noun or
-verb phrase instead of only being applicable to the preceding head phrase.
+verb phrase instead of only being applicable to the immediately preceding head
+phrase.
 
 ## From...
 
